[package]
name = "paper_server"
version = "1.6.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
paper_utils = { git = "ssh://git@github.com/Paper-Book/paper-utils.git", tag = "v1.2.2" }
paper_cache = { git = "ssh://git@github.com/Paper-Book/paper-cache.git", tag = "v1.8.6" }
kwik = { git = "https://github.com/KiaShakiba/kwik.git", tag = "v1.15.6" }
byteorder = "1.5.0"
thiserror = "2.0.12"
log4rs = "1.3.0"
log = "0.4.27"
parse-size = "1.1.0"
dotenv = "0.15.0"
serde_yaml = "0.9.34"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }

[[bin]]
name = "paper-server"
path = "src/main.rs"
